--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 
 			<dependency>
 				<groupId>com.afs</groupId>
-				<artifactId>user-client</artifactId>
+				<artifactId>afs-user-client</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 			
